removes everything superfluous

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,23 +1,5 @@
-<video autoplay loop="loop" id="bgvid">
-  <source src="background.MOV" type="video/mov">
-  <source src="background.mp4" type="video/mp4">
-</video>
-
-<div class="episode-buttons" ng-class="{'open': portalOpen}">
-  <p class="episode-selection left" ng-click="go('/ep1')">
-    I
-  </p>
-  <p class="episode-selection right" ng-click="go('/ep2')">
-    II
-  </p>
+<div class="container">
+  <h1>Expressive-Art</h1>
+  <h2>Home</h2>
 </div>
 
-<div class="clock" ng-class="{'open': !portalOpen}">
-  <div class='container1'></div>
-  <div class='container2'></div>
-  <div class='container3'></div>
-</div>
-
-<audio autoplay="autoplay" loop="loop">
-   <source src="LANDR-Scary2.mp3" />
-</audio>
