--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,5 +1,10 @@
 <div class="container">
-  <h1>Expressive-Art</h1>
-  <h2>Home</h2>
+  <div class="jumbotron">
+    <h1>Expressive-Art</h1>
+
+    <p><a class="btn btn-primary btn-lg" href="/presentation" role="button">Presentation</a></p>
+    <p><a class="btn btn-primary btn-lg" href="/remote-control" role="button">Remote-Control</a></p>
+  </div>
+
 </div>
 
