--- a/public/views/home.html
+++ b/public/views/home.html
@@ -2,8 +2,12 @@
   <div class="jumbotron">
     <h1>Expressive-Art</h1>
 
-    <p><a class="btn btn-primary btn-lg" href="/presentation" role="button">Presentation</a></p>
-    <p><a class="btn btn-primary btn-lg" href="/remote-control" role="button">Remote-Control</a></p>
+  <div class="btn-group" role="group" aria-label="...">
+    <button type="button" class="btn btn-default"><a href="/presentation">Presentation</a></button>
+    <button type="button" class="btn btn-default"><a href="/remote-control">Remote Control</a></button>
+    <button type="button" class="btn btn-default">About</button>
+  </div>
+
   </div>
 
 </div>
